Fix settings menu overlapping

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ h1 {
 .header-controls {
     display: flex;
     position: absolute;
-    left: 80px;
+    left: 10%;
     top: -100px; /* Initially positioned off-screen */
     z-index: 1;
     transition: top 0.3s ease-in-out;
@@ -839,7 +839,7 @@ input:not(:checked) + .slider .sun {
 
 @media (max-width: 480px) {
     .header-controls {
-        left: 20px;
+        left: 10%;
     }
 
     .header-controls.visible {
@@ -928,7 +928,7 @@ input:not(:checked) + .slider .sun {
 
 @media (max-width: 360px) {
     .header-controls {
-        left: 10px;
+        left: 5%;
     }
 
     .header-controls.visible {
